--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Local configuration file
 database.ini
 
+USER = "glebk"
+PASSWORD = "PASSWORD"
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -161,3 +163,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+/homework-1/north_data/config.py
